@@ -1,6 +1,9 @@
 $Id: Changelog.txt,v 1.229 2017/12/12 11:26:25 nanard Exp $
 miniUPnP client Changelog.
 
+2018/04/30:
+  listdevices: show devices sorted by XML desc URL
+
 2018/04/26:
   Small fix in miniupnpcmodule.c (python module)
   Support cross compiling in Makefile.mingw
